[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/inputs/integer_field.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/inputs/integer_input.gd" type="Script" id=2]

[node name="integer_input" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 293.0
margin_right = 200.0
margin_bottom = 307.0
rect_min_size = Vector2( 200, 14 )
align = 2

[node name="integer_field" parent="." instance=ExtResource( 1 )]
margin_left = 204.0
margin_bottom = 600.0
size_flags_horizontal = 3
[connection signal="content_change" from="integer_field" to="." method="_on_integer_field_content_change"]
